# ultnote

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
ai-engine/: Dockerfile  main.py
api/: Cargo.toml  Dockerfile
api/src/: auth.rs  config.rs  error.rs  main.rs
api/src/models/: memo.rs  mod.rs
api/src/routes/: health.rs  memo.rs  mod.rs  search.rs  tags.rs
api/src/services/: embedder.rs  mod.rs  qdrant.rs
core-api/: Cargo.toml
core-api/src/: main.rs
docs/: architecture.md  progress.md  test-score-normalization.md
embedder/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: DateFilters.svelte  MemoCard.svelte  MemoModal.svelte  SearchResults.svelte  TagInput.svelte
frontend/src/lib/styles/: _variables.scss  global.scss
frontend/src/routes/: +layout.svelte  +page.svelte
nginx/: nginx.conf
scripts/: deploy.sh  seed-demo.sh
