[package]
name = "ultnote-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for embedder)
reqwest = { version = "0.12", features = ["json"] }

# Vector database
qdrant-client = "1.16"

# Error handling
eyre = "0.6"
color-eyre = "0.6"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# JWT / Auth
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
